fix: avatar typo

--- a/components.json
+++ b/components.json
@@ -16,7 +16,7 @@
       "dependencies": []
     },
     {
-      "name": "Avatar",
+      "name": "avatar",
       "description": "An image element with a fallback for representing the user.",
       "dependencies": []
     }
