--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -45,6 +46,6 @@
     "typescript": "5.8.2"
   },
   "overrides": {
-  "react-syntax-highlighter": "15.0.0"
-}
+    "react-syntax-highlighter": "15.0.0"
+  }
 }
