fix: path import in component docs example; build errors in tsconfig.json

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -7,8 +7,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
-    }
+      "@/*": ["./*"],
+      "react": ["./node_modules/@types/react"]
+    },
   },
   "include": [
     "**/*.ts",
@@ -19,5 +20,5 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
 }
